--- a/book/web/WEB-INF/pages/cart/cart.html
+++ b/book/web/WEB-INF/pages/cart/cart.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" th:href="@{/static/css/minireset.css}" />
     <link rel="stylesheet" th:href="@{/static/css/common.css}" />
     <link rel="stylesheet" th:href="@{/static/css/cart.css}" />
+    <script language="JavaScript" th:src="@{/static/script/cart.js}"></script>
   </head>
   <body>
     <div class="header">
@@ -15,14 +16,14 @@
           <a th:href="@{/WEB-INF/pages/index.html}">
             <img th:src="@{/static/img/logo.gif}" alt=""
           /></a>
-          <h1>My Cart</h1>
+          <h1>Your Cart</h1>
         </div>
         <div class="header-right">
           <h3>Welcome <span th:text="${session.user.getUname()}"></span></h3>
-          <div class="order"><a href="../order/order.html">我的订单</a></div>
+          <div class="order"><a th:href="@{order.do(operate='showOrder')}">MyOrder</a></div>
           <div class="destory"><a href="../index.html">注销</a></div>
           <div class="gohome">
-            <a href="../index.html">返回</a>
+            <a th:href="@{page.do(operate='page', page='index')}">return</a>
           </div>
         </div>
       </div>
@@ -48,12 +49,12 @@
               </td>
               <td th:text="${cartItem.getBook().getBookName()}"></td>
               <td>
-                <span class="count">-</span>
+                <span class="count" th:onclick="|editCartCount(${cartItem.getId()},${cartItem.getBuyCount() - 1})|">-</span>
                 <input class="count-num" type="text" th:value="${cartItem.getBuyCount()}"/>
-                <span class="count">+</span>
+                <span class="count" th:onclick="|editCartCount(${cartItem.getId()}, ${cartItem.getBuyCount() + 1})|">+</span>
               </td>
               <td th:text="${cartItem.getBook().getPrice()}"></td>
-              <td th:text="${cartItem.getBook().getPrice() * cartItem.getBuyCount()}"></td>
+              <td th:text="${cartItem.getItemTotal()}"></td>
               <td><a href="">remove</a></td>
             </tr>
           </tbody>
@@ -99,31 +100,23 @@
           <dl>
             <dt>关于尚硅谷</dt>
             <dd>教育理念</dd>
-            <!-- <dd>名师团队</dd>
-            <dd>学员心声</dd> -->
           </dl>
           <dl>
             <dt>资源下载</dt>
             <dd>视频下载</dd>
-            <!-- <dd>资料下载</dd>
-            <dd>工具下载</dd> -->
           </dl>
           <dl>
             <dt>加入我们</dt>
             <dd>招聘岗位</dd>
-            <!-- <dd>岗位介绍</dd>
-            <dd>招贤纳师</dd> -->
           </dl>
           <dl>
-            <dt>联系我们</dt>
-            <dd>http://www.atguigu.com</dd>
+            <dt>contact me</dt>
+            <dd>https://github.com/Double97828</dd>
             <dd></dd>
           </dl>
         </div>
       </div>
-      <div class="down">
-        尚硅谷书城.Copyright ©2015
-      </div>
+      <div class="down">Double Book Shop.Copyright ©2021</div>
     </div>
   </body>
 </html>
