--- a/book/web/WEB-INF/pages/order/order.html
+++ b/book/web/WEB-INF/pages/order/order.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>我的订单</title>
-    <link rel="stylesheet" href="../../static/css/minireset.css" />
-    <link rel="stylesheet" href="../../static/css/common.css" />
-    <link rel="stylesheet" href="../../static/css/cart.css" />
-    <link rel="stylesheet" href="../../static/css/bookManger.css" />
-    <link rel="stylesheet" href="../../static/css/orderManger.css" />
+    <title>Your Order Page</title>
+    <link rel="stylesheet" th:href="@{/static/css/minireset.css}" />
+    <link rel="stylesheet" th:href="@{/static/css/common.css}" />
+    <link rel="stylesheet" th:href="@{/static/css/cart.css}" />
+    <link rel="stylesheet" th:href="@{/static/css/bookManger.css}" />
+    <link rel="stylesheet" th:href="@{/static/css/orderManger.css}" />
   </head>
   <body>
     <div class="header">
       <div class="w">
         <div class="header-left">
-          <a href="../index.html">
-            <img src="../../static/img/logo.gif" alt=""
-          /></a>
-          <h1>我的订单</h1>
+          <a th:href="@{page.do(operate=('page'), page=('index'))}"><img th:src="@{/static/img/logo.gif}" alt=""/></a>
+          <h1>Your Order</h1>
         </div>
         <div class="header-right">
-          <h3>欢迎<span>张总</span>光临尚硅谷书城</h3>
-          <div class="order"><a href="../order/order.html">我的订单</a></div>
+          <h3 th:if="${session.user != null}"> Welcome <span th:text="${session.user.getUname()}"></span></h3>
+          <h3 th:unless="${session.user != null}"> Welcome to Double Book Shop</h3>
+<!--          <div class="order"><a href="../order/order.html">我的订单</a></div>-->
           <div class="destory"><a href="../index.html">注销</a></div>
           <div class="gohome">
-            <a href="../index.html">返回</a>
+            <a th:href="@{page.do(operate=('page'), page=('index'))}">return</a>
           </div>
         </div>
       </div>
@@ -34,43 +33,21 @@
         <table>
           <thead>
             <tr>
-              <th>订单号</th>
-              <th>订单日期</th>
-              <th>订单金额</th>
-              <th>订单数量</th>
-              <th>订单状态</th>
-              <th>订单详情</th>
+              <th>Order No</th>
+              <th>Order Date</th>
+              <th>Order price</th>
+              <th>Order Count</th>
+              <th>Order Status</th>
+              <th>Order Details</th>
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td>12354456895</td>
-              <td>
-                2015.04.23
-              </td>
-              <td>90.00</td>
-              <td>88</td>
+            <tr th:if="${session.user.getOrderBeanList() != null}" th:each="order: ${session.user.getOrderBeanList()}">
+              <td th:text="${order.getOrderNo()}">12354456895</td>
+              <td th:text="${#dates.format(order.getOrderDate(), 'yyyy-MM-dd hh:mm:ss')}">2015.04.23</td>
+              <td th:text="${order.getOrderMoney()}">90.00</td>
+              <td th:text="${order.getTotalCount()}">88</td>
               <td><a href="" class="send">等待发货</a></td>
-              <td><a href="">查看详情</a></td>
-            </tr>
-            <tr>
-              <td>12354456895</td>
-              <td>
-                2015.04.23
-              </td>
-              <td>90.00</td>
-              <td>88</td>
-              <td><a href="" class="send">未发货</a></td>
-              <td><a href="">查看详情</a></td>
-            </tr>
-            <tr>
-              <td>12354456895</td>
-              <td>
-                2015.04.23
-              </td>
-              <td>90.00</td>
-              <td>88</td>
-              <td><a href="" class="send">已发货</a></td>
               <td><a href="">查看详情</a></td>
             </tr>
           </tbody>
