--- a/book/web/WEB-INF/pages/cart/cart.html
+++ b/book/web/WEB-INF/pages/cart/cart.html
@@ -14,7 +14,7 @@
       <div class="w">
         <div class="header-left">
           <a th:href="@{/WEB-INF/pages/index.html}">
-            <img th:src="@{/static/img/logo.gif}" alt=""
+            <img th:src="@{/img/logo.jpg}" alt=""
           /></a>
           <h1>Your Cart</h1>
         </div>
