--- a/book/web/WEB-INF/pages/cart/checkout.html
+++ b/book/web/WEB-INF/pages/cart/checkout.html
@@ -22,7 +22,7 @@
 <body>
 
 <!--	<div id="header">-->
-<!--			<img class="logo_img" alt="" src="../../static/img/logo.gif" >-->
+<!--			<img class="logo_img" alt="" src="../../static/img/logo.jpg" >-->
 <!--			<span class="wel_word">结算</span>-->
 <!--			<div>-->
 <!--				<span>欢迎<span class="um_span">张总</span>光临尚硅谷书城</span>-->
@@ -34,7 +34,7 @@
 		<div class="header">
 			<div class="w">
 				<div class="header-left">
-					<a th:href="@{page.do(operate='page',page='index')}"> <img th:src="@{/static/img/logo.gif}" alt=""/></a>
+					<a th:href="@{page.do(operate='page',page='index')}"> <img th:src="@{/img/logo.jpg}" alt=""/></a>
 					<span>My Cart</span>
 				</div>
 				<div class="header-right" >
