--- a/book/web/WEB-INF/pages/order/order.html
+++ b/book/web/WEB-INF/pages/order/order.html
@@ -14,7 +14,7 @@
     <div class="header">
       <div class="w">
         <div class="header-left">
-          <a th:href="@{page.do(operate=('page'), page=('index'))}"><img th:src="@{/static/img/logo.gif}" alt=""/></a>
+          <a th:href="@{page.do(operate=('page'), page=('index'))}"><img th:src="@{/img/logo.jpg}" alt=""/></a>
           <h1>Your Order</h1>
         </div>
         <div class="header-right">
